--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "webpack-dev-server --inline --hot"
+    "dev": "webpack --watch"
   },
   "author": "",
   "license": "ISC",
@@ -23,7 +23,6 @@
     "webpack-dev-server": "^2.4.5"
   },
   "dependencies": {
-    "babel-preset-stage-2": "^6.24.1",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-redux": "^5.0.5",
