--- a/package.json
+++ b/package.json
@@ -23,9 +23,13 @@
     "webpack-dev-server": "^2.4.5"
   },
   "dependencies": {
+    "body-parser": "^1.17.2",
+    "express": "^4.15.3",
+    "mysql2": "^1.3.2",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-redux": "^5.0.5",
-    "redux": "^3.6.0"
+    "redux": "^3.6.0",
+    "sequelize": "^3.30.4"
   }
 }
