--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "chai": "^4.0.1",
     "clean-webpack-plugin": "^0.1.16",
     "css-loader": "^0.28.4",
+    "isomorphic-fetch": "^2.2.1",
     "mocha": "^3.4.2",
+    "redux-thunk": "^2.2.0",
     "style-loader": "^0.18.1",
     "webpack": "^2.6.1",
     "webpack-dev-server": "^2.4.5"
@@ -26,6 +28,7 @@
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-redux": "^5.0.5",
-    "redux": "^3.6.0"
+    "redux": "^3.6.0",
+    "redux-devtools-extension": "^2.13.2"
   }
 }
