--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "css-loader": "^0.28.4",
     "isomorphic-fetch": "^2.2.1",
     "mocha": "^3.4.2",
+    "mysql": "^2.13.0",
     "redux-thunk": "^2.2.0",
     "style-loader": "^0.18.1",
     "webpack": "^2.6.1",
