--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   "devDependencies": {
     "babel-cli": "^6.24.1",
     "babel-core": "^6.24.1",
+    "babel-loader": "^7.0.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
     "chai": "^4.0.1",
     "clean-webpack-plugin": "^0.1.16",
     "css-loader": "^0.28.4",
