--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "babel-cli": "^6.24.1",
     "babel-core": "^6.24.1",
+    "babel-jest": "^20.0.3",
     "babel-loader": "^7.0.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
@@ -19,7 +20,9 @@
     "chai": "^4.0.1",
     "clean-webpack-plugin": "^0.1.16",
     "css-loader": "^0.28.4",
+    "expect": "^1.20.2",
     "isomorphic-fetch": "^2.2.1",
+    "jest": "^20.0.4",
     "jsdom": "^11.0.0",
     "mocha": "^3.4.2",
     "mysql": "^2.13.0",
