--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "app/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --verbose",
+    "test-watch": "jest --watch",
     "dev": "webpack-dev-server --watch"
   },
   "author": "",
@@ -21,11 +22,13 @@
     "clean-webpack-plugin": "^0.1.16",
     "css-loader": "^0.28.4",
     "expect": "^1.20.2",
+    "fetch-mock": "^5.11.0",
     "isomorphic-fetch": "^2.2.1",
     "jest": "^20.0.4",
     "jsdom": "^11.0.0",
     "mocha": "^3.4.2",
     "mysql": "^2.13.0",
+    "redux-mock-store": "^1.2.3",
     "redux-thunk": "^2.2.0",
     "style-loader": "^0.18.1",
     "webpack": "^2.6.1",
