--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "app/index.js",
   "scripts": {
+    "coverage": "jest --coverage",
     "test": "jest --verbose",
     "test-watch": "jest --watch",
     "dev": "webpack-dev-server --watch"
