--- a/package.json
+++ b/package.json
@@ -22,13 +22,17 @@
     "chai": "^4.0.1",
     "clean-webpack-plugin": "^0.1.16",
     "css-loader": "^0.28.4",
+    "enzyme": "^2.8.2",
     "expect": "^1.20.2",
     "fetch-mock": "^5.11.0",
     "isomorphic-fetch": "^2.2.1",
     "jest": "^20.0.4",
+    "jest-enzyme": "^3.2.0",
     "jsdom": "^11.0.0",
     "mocha": "^3.4.2",
     "mysql": "^2.13.0",
+    "react-addons-test-utils": "^15.5.1",
+    "react-test-renderer": "^15.5.4",
     "redux-mock-store": "^1.2.3",
     "redux-thunk": "^2.2.0",
     "style-loader": "^0.18.1",
