--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "mocha": "^3.4.2",
     "mysql": "^2.13.0",
     "react-addons-test-utils": "^15.5.1",
+    "react-router": "^4.1.1",
+    "react-router-dom": "^4.1.1",
     "react-test-renderer": "^15.5.4",
     "redux-mock-store": "^1.2.3",
     "redux-thunk": "^2.2.0",
