--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "jest": "^20.0.4",
     "jest-enzyme": "^3.2.0",
     "jsdom": "^11.0.0",
+    "jsonwebtoken": "^7.4.1",
     "mocha": "^3.4.2",
     "mysql": "^2.13.0",
     "react-addons-test-utils": "^15.5.1",
