--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "coverage": "jest --coverage",
     "test": "jest --verbose",
     "test-watch": "jest --watch --notify",
-    "dev": "webpack-dev-server --watch",
+    "dev": "webpack-dev-server --hot",
     "start-services": "node node/index.js & node dbservice/db.js & node auth/auth.js &",
     "restart-services": "npm run stop-services; npm run start-services",
     "stop-services": "./stop.sh",
@@ -52,6 +52,7 @@
     "mysql2": "^1.3.2",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
+    "react-hot-loader": "^3.0.0-beta.7",
     "react-redux": "^5.0.5",
     "redux": "^3.6.0",
     "redux-devtools-extension": "^2.13.2",
