--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "jest-enzyme": "^3.2.0",
     "jsdom": "^11.0.0",
     "jsonwebtoken": "^7.4.1",
+    "less": "^2.7.2",
+    "less-loader": "^4.0.4",
     "mocha": "^3.4.2",
     "mysql": "^2.13.0",
     "react-addons-test-utils": "^15.5.1",
