--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "mocha": "^3.4.2",
     "mysql": "^2.13.0",
     "react-addons-test-utils": "^15.5.1",
+    "react-cookie": "^2.0.7",
     "react-router": "^4.1.1",
     "react-router-dom": "^4.1.1",
     "react-test-renderer": "^15.5.4",
