--- a/package.json
+++ b/package.json
@@ -53,6 +53,8 @@
     "body-parser": "^1.17.2",
     "express": "^4.15.3",
     "mysql2": "^1.3.2",
+    "pg": "^6.4.0",
+    "pg-hstore": "^2.3.2",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-hot-loader": "^3.0.0-beta.7",
