--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "mysql2": "^1.3.2",
     "pg": "^6.4.0",
     "pg-hstore": "^2.3.2",
+    "prop-types": "^15.5.10",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-hot-loader": "^3.0.0-beta.7",
