--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "react-dom": "^15.5.4",
     "react-hot-loader": "^3.0.0-beta.7",
     "react-redux": "^5.0.5",
+    "react-svg": "^2.1.21",
     "redux": "^3.6.0",
     "redux-devtools-extension": "^2.13.2",
     "sequelize": "^3.30.4"
