--- a/package.json
+++ b/package.json
@@ -36,8 +36,10 @@
     "jsonwebtoken": "^7.4.1",
     "less": "^2.7.2",
     "less-loader": "^4.0.4",
+    "lodash": "^4.17.4",
     "mocha": "^3.4.2",
     "mysql": "^2.13.0",
+    "react-addons-perf": "^15.4.2",
     "react-addons-test-utils": "^15.5.1",
     "react-cookie": "^2.0.7",
     "react-router": "^4.1.1",
