--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "enzyme": "^2.8.2",
     "expect": "^1.20.2",
     "fetch-mock": "^5.11.0",
+    "history": "^4.6.3",
     "isomorphic-fetch": "^2.2.1",
     "jest": "^20.0.4",
     "jest-enzyme": "^3.2.0",
